<resources>
    <string name="vr">VR</string>
    <string name="schedule_trip">Schedule Trip</string>
    <string name="gallery">Gallery</string>
    <string name="vr_tour">Vr Tour</string>
    <string name="finding_your_location">Finding your location</string>
    <string name="one_moment_while_we_get_your_location">One moment while we get your location</string>
    <string name="trip_calendar">Trip Calendar</string>
    <string name="departure_time">Departure Time</string>
    <string name="lagos_los">Lagos, LOS</string>
    <string name="scan_face_to_complete">Scan face to complete</string>
    <string name="done">Done</string>
    <string name="you_re_all_set">You\'re all set!</string>
    <string name="a_summary_has_been_sent_to_your_inbox">A Summary has been sent to your inbox</string>
    <string name="_0_6_btc">0.6 BTC</string>
    <string name="total">Total</string>
</resources>