<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stack_layers.PhaseOneBottomSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btmSheetLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/rounded_corner_bottom_sheet_grey">

        <LinearLayout
            android:id="@+id/layoutScanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/total"
                android:textAllCaps="true"
                android:textColor="@color/pure_white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_0_6_btc"
                android:textColor="@color/pure_white"
                android:textSize="24sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie_face_id.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/scan_face_to_complete"
                android:textColor="@color/pure_white"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/you_re_all_set"
                android:textColor="@color/pure_white"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/a_summary_has_been_sent_to_your_inbox"
                android:textColor="@color/pure_white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:src="@drawable/ic_ticket" />

            <TextView
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/roboto"
                android:text="@string/done"
                android:padding="16dp"
                android:textColor="@color/pink"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>