<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_black"
    tools:context=".ExpandedViewActivity">

    <ImageView
        android:id="@+id/ivExpandedImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/pure_white"
        android:lines="1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWeather"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner_bg"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        tools:layout_editor_absoluteX="120dp">

        <ImageView
            android:id="@+id/ivWeatherIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_rain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivWeatherIcon"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Weather Now"
                android:textAllCaps="true"
                android:textColor="@color/pure_white"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWeatherTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/pure_white"
                    android:textSize="12sp"
                    tools:text="32C" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="Light Rain"
                    android:textColor="@color/pure_white"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textColor="@color/pure_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Lorem Ipsum is simply dummy text ofm Ipsum is simply dummy text ofm Ipsum is simply dummy text ofm Ipsum is simply dummy text ofm Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vr" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/vr_tour"
            android:textAllCaps="true"
            android:textColor="@color/pure_white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <View
            android:layout_width="0.6dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:background="@color/pure_white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/gallery"
            android:textAllCaps="true"
            android:textColor="@color/pure_white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="#FF007F"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivExpandedImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vr" />

            <TextView
                android:id="@+id/btnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/schedule_trip"
                android:textAllCaps="true"
                android:textColor="@color/pure_white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/button"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="80dp"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:layout_marginBottom="50dp"-->
    <!--        android:background="@drawable/rounded_corner_large_button"-->
    <!--        android:drawableStart="@drawable/ic_vr"-->
    <!--        android:drawablePadding="0dp"-->
    <!--        android:gravity="center"-->
    <!--        android:paddingStart="50dp"-->
    <!--        android:paddingEnd="50dp"-->
    <!--        android:text="@string/schedule_trip"-->
    <!--        android:textAllCaps="true"-->
    <!--        android:textColor="@color/pure_white"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/ivExpandedImage"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>